<resources>
    <string name="app_name">버니 프렌즈</string>
    <string name="app_name2">버니 프렌즈</string>
    <string name="word_auto_signIn">자동로그인</string>
    <string name="word_signIn">로그인</string>
    <string name="word_signOut">로그아웃</string>
    <string name="word_complete">완료</string>
    <string name="word_signUp">회원가입</string>
    <string name="word_req_auth">인증요청</string>
    <string name="word_confirm">확인</string>
    <string name="word_verification_confirm">인증확인</string>
    <string name="word_cancel">취소</string>
    <string name="word_id">아이디</string>
    <string name="word_password">비밀번호</string>
    <string name="word_certified_number">인증된 번호</string>
    <string name="word_modified">수정</string>
    <string name="word_current_version">현재 버전</string>
    <string name="word_latest_version">최신 버전</string>
    <string name="word_update">업데이트</string>
    <string name="word_secessionDate">탈퇴 신청 날짜: </string>
    <string name="word_double_check">중복확인</string>
    <string name="word_mobileNumber">휴대폰 번호</string>
    <string name="word_contact">연락처</string>
    <string name="word_alarm_container">알림함</string>
    <string name="word_phone_auth">휴대번호 인증</string>
    <string name="word_setting">설정</string>
    <string name="word_notice_alert">알림</string>
    <string name="word_reg">등록</string>
    <string name="word_config_group_title">그룹관리</string>
    <string name="word_select">선택</string>
    <string name="word_change_groupName">그룹명 변경</string>
    <string name="word_delete_group">그룹 삭제</string>
    <string name="word_current_group">현재그룹</string>
    <string name="word_plus_newGroup">+새그룹</string>
    <string name="word_search">검색</string>
    <string name="word_search_result">검색결과</string>
    <string name="word_fan">PLUS고객</string>
    <string name="word_member_leave">회원탈퇴</string>
    <string name="word_select_photo">사진선택</string>
    <string name="word_reg_photo">사진등록</string>
    <string name="msg_click_for_reg_photo">사진을 등록하시려면 눌러주세요</string>
    <string name="word_reply_edit">댓글 수정</string>
    <string name="word_complete_edit">수정완료</string>
    <string name="word_reAuth">재인증</string>
    <string name="word_contents">내용</string>
    <string name="word_notice">공지사항</string>
    <string name="word_notice2">주의사항</string>
    <string name="word_faq_en">FAQ</string>
    <string name="word_version_info">버전 정보</string>
    <string name="word_alarm_setting">푸시설정</string>
    <string name="word_reg_newGroup">새그룹 등록</string>
    <string name="word_total">전체</string>
    <string name="word_md_pick">MD추천</string>
    <string name="word_approve">승인</string>
    <string name="word_detail">자세히 보기</string>
    <string name="word_album_name">BUFF</string>
    <string name="word_location">위치</string>
    <string name="word_next">다음</string>
    <string name="word_delete">삭제</string>
    <string name="word_total_agree">전체동의</string>
    <string name="word_share_page">PR샵 공유</string>
    <string name="word_share_post">포스트 공유</string>
    <string name="word_plus">+멤버</string>
    <string name="word_my_plus">+스토어 멤버</string>
    <string name="word_group_name">그룹명</string>
    <string name="word_image_edit">사진편집</string>
    <string name="word_add">추가</string>
    <string name="word_config_account">계정관리</string>
    <string name="msg_input_id">아이디를 입력해 주세요.</string>
    <string name="msg_input_password">비밀번호를 입력해 주세요.</string>
    <string name="msg_input_nickName">닉네임을 입력해 주세요.</string>
    <string name="msg_input_nickname_over2">닉네임은 2자이상 입력해 주세요.</string>
    <string name="msg_find_id">아이디찾기</string>
    <string name="msg_find_password">비밀번호찾기</string>
    <string name="msg_confirm_id">아이디를\n확인 해주세요</string>
    <string name="msg_input_search_word">검색어를 입력해 주세요.</string>
    <string name="msg_change">변경하기</string>
    <string name="msg_input_not_alpha">\@없이 입력</string>
    <string name="msg_latest_version">최신 버전 입니다.</string>
    <string name="msg_secession_description1">회원탈퇴 신청이 완료\n되었습니다</string>
    <string name="msg_secession_description2">14일 이내 재로그인 시 탈퇴회원 복구 절차를 진행 하실 수 있습니다.</string>
    <string name="msg_agree_terms">약관을 동의해 주세요.</string>
    <string name="msg_input_change_groupName">변경하실 그룹명을 입력해 주세요.</string>
    <string name="msg_change_groupName">변경 그룹명</string>
    <string name="msg_group_config_description">그룹의 순서를 변경하시려면 원하는 그룹을 길게 누르고 위, 아래로 움직여 보세요.</string>
    <string name="msg_no_group">관리할 그룹이 없습니다.</string>
    <string name="msg_duplicate_nickname">이미 사용중인 닉네임 입니다.</string>
    <string name="msg_duplicate_id">이미 사용중인 아이디 입니다.</string>
    <string name="msg_usable_id">사용 가능한 아이디 입니다.</string>
    <string name="msg_enable_use">사용 가능합니다.</string>
    <string name="msg_do_not_attach_broken_image">손상된 이미지는 첨부할수 없습니다.</string>
    <string name="msg_input_contents">내용을 입력해 주세요.</string>
    <string name="msg_request_verification">휴대폰 인증요청 작업을 해주세요.</string>
    <string name="msg_input_email_id">이메일 아이디를 입력해 주세요.</string>
    <string name="msg_input_new_password">새로운 비밀번호를 입력해 주세요.</string>
    <string name="msg_not_verified2">SMS 인증 단계를 완료해야\n버니 프렌즈 서비스를 이용할 수 있습니다.</string>
    <string name="msg_request_sms">SMS 인증이 요청 되었습니다.</string>
    <string name="msg_failed_login">로그인을 실패하였습니다.\n아이디 비밀번호를 다시 확인해주세요.</string>
    <string name="msg_changed_password">비빌번호가 변경되었습니다.\n변경하신 비밀번호로\n로그인을 해주세요.</string>
    <string name="msg_input_groupName">그룹명을 입력 해주세요.</string>
    <string name="msg_major_update">버니 프렌즈 서비스에\n새로운 기능이 추가되었습니다.\n업데이트를 진행해 주세요.</string>
    <string name="msg_minor_update">새로운 버전이 업데이트 되었습니다.\n업데이트 하시겠습니까?</string>
    <string name="msg_contact_loading">데이타 최적화 중입니다.\n잠시만 기다려주세요</string>
    <string name="msg_alarm_popup">버니 프렌즈 만의 유익하고 재미있는 이벤트 소식들을 알림으로 받아 보시겠습니까?</string>
    <string name="msg_valid_email">올바른 형식의 이메일 아이디를 입력해 주세요.</string>
    <string name="msg_check_duplication_nickName">닉네임 중복체크를 해주세요.</string>
    <string name="msg_password_focus">새 비밀번호 입력</string>
    <string name="msg_edit_complete">수정되었습니다.</string>
    <string name="msg_save_complete">저장되었습니다.</string>
    <string name="msg_delete_complete">삭제되었습니다.</string>
    <string name="msg_close_signUp">회원가입 중단 시 입력한 모든 정보를\n다시 작성해야합니다.</string>
    <string name="msg_disconnected_network">네트워크에 연결되어 있지 않습니다.</string>
    <string name="msg_check_network_status">네트워크 연결 상태 확인 후,\n다시 시도해주세요.</string>
    <string name="msg_do_replay">답글달기</string>
    <string name="msg_disable_emoticon">이모티콘은 첨부할 수 없습니다.</string>
    <string name="msg_setting">설정하기</string>
    <string name="msg_location_error1">일시적 내 위치를 확인할 수 없습니다.</string>
    <string name="msg_location_error2">사용기기의 \'위치정보\' 사용설정을\n확인해주시기바랍니다.</string>
    <string name="msg_location_error3">* 높은 정확성을 위해 GPS, 이동통신망을\n사용한 위치추적을 선택해주세요.</string>
    <string name="msg_not_exist_prnumber">PR넘버가 없습니다.</string>
    <string name="msg_grant_permission">권한 승인하기</string>
    <string name="word_share">공유</string>
    <string name="msg_gift">선물하기</string>
    <string name="msg_gift_by_point">포인트로 선물하기</string>
    <string name="msg_gift_by_cash">캐시로 선물하기</string>
    <string name="msg_input_review_contents">리뷰 내용을 입력해 주세요</string>
    <string name="msg_input_event_review_contents">당첨후기 내용을 입력해 주세요</string>
    <string name="msg_input_review_over_10">리뷰 내용을 10자 이상 입력해 주세요</string>
    <string name="msg_input_event_review_over_10">당첨후기 내용을 10자 이상 입력해 주세요</string>
    <string name="msg_reg_event_image">이미지를 등록해주세요.</string>
    <string name="msg_gallery_description1">아래 리스트에서 등록할 사진을 선택해 주세요.</string>
    <string name="msg_gallery_description2">(최대 10장까지 등록하실 수 있습니다.)</string>
    <string name="msg_gallery_description3">사진촬영은 여기를 눌러주세요</string>
    <string name="word_money_unit">원</string>
    <string name="word_age_unit">세</string>
    <string name="word_point_unit">P</string>
    <string name="msg_editing_image">이미지를 편집중입니다</string>
    <string name="msg_post_image_list_description">사진 편집을 원하시는 경우 사진을 선택해 주세요.</string>
    <string name="msg_select_delete_image">삭제할 사진을 선택해 주세요.</string>
    <string name="word_delete_image">사진삭제</string>
    <string name="msg_input_phone_name_number">휴대폰 번호/닉네임/넘버입력</string>
    <string name="msg_search">검색하기</string>
    <string name="msg_search_dial_pad">다이얼패드로 검색하기</string>
    <string name="word_send_msg">보낸 메시지</string>
    <string name="word_receiver">받는사람</string>
    <string name="word_use_date">사용일자</string>
    <string name="word_req_date">신청일자</string>
    <string name="word_use_point">사용 포인트</string>
    <string name="word_use_cash">사용 캐시</string>
    <string name="word_use_bol">사용 럭키볼</string>
    <string name="word_plus_add">+ 추가</string>
    <string name="word_address_book">주소록</string>
    <string name="word_total_delete">전체삭제</string>
    <string name="word_sort_past">과거순</string>
    <string name="word_select_pr_shop">PR샵 선택</string>
    <string name="msg_select_my_customer_description">APP을 설치하지 않은 고객은 노출되지 않습니다.</string>
    <string name="to_password">비밀번호를</string>
    <string name="word_recommend">추천</string>
    <string name="word_recommend_history">내 추천이력</string>
    <string name="msg_view_my_recommend_history">내 추천이력 보기</string>
    <string name="word_mobile_number">휴대폰번호</string>
    <string name="msg_input_mobile_number">휴대폰번호를 입력해 주세요</string>
    <string name="msg_input_pr_number">PR넘버를 입력해 주세요</string>
    <string name="word_review">리뷰</string>
    <string name="word_review2">후기</string>
    <string name="word_buy_review">구매리뷰</string>
    <string name="msg_modification_of_review">리뷰를 수정중 입니다.</string>
    <string name="msg_registration_of_review">리뷰를 등록중 입니다.</string>
    <string name="msg_modification_of_post">게시글을 수정중 입니다.</string>
    <string name="msg_registration_of_post">게시글을 등록중 입니다.</string>
    <string name="msg_error_registration_of_photo">이용에 불편을 드려 죄송합니다.\n사진을 등록 중 오류가 발생하였습니다.</string>
    <string name="word_gender">성별</string>
    <string name="word_male">남성</string>
    <string name="word_female">여성</string>
    <string name="word_job">직업</string>
    <string name="word_married_status">결혼</string>
    <string name="word_child">자녀</string>
    <string name="word_address">주소</string>
    <string name="word_retention_cash">보유 캐시</string>
    <string name="word_email">이메일</string>
    <string name="msg_canceled_buy">구매가 취소되었습니다.</string>
    <string name="msg_canceled_buy_desc">(환불완료는 영업일 기준 3~4일 정도 소요될 수 있습니다.)</string>
    <string name="word_change_cash_amount">출금신청 금액</string>
    <string name="word_account_name">예금주</string>
    <string name="word_bank_name">은행명</string>
    <string name="word_account_number">입금계좌</string>
    <string name="msg_cash_exchange_desc2">- 출금신청은 본인명의 통장으로만 가능합니다.\n- 출금신청은 접수일로 부터 최대 10일까지 소요됩니다.\n- 출금신청 즉시 보유하고 계신 캐시가 차감됩니다.\n- 출금신청 시 출금신청 금액에서 출금수수료 1,000원이 차감됩니다.</string>
    <string name="msg_req_cash_exchange">현금교환 신청하기</string>
    <string name="msg_pplus_desc">주식회사 루트37은 통신판매 중개자로서 통신판매의 당사자가 아니며 상품주문, 구매 및 환불등과 관련한 의무와 책임은 각 판매자에게 있습니다.</string>
    <string name="word_pplus_company_info">주식회사 루트37 사업자 정보</string>
    <string name="word_pplus_company">주식회사 루트37</string>
    <string name="word_pplus_ceo">대표이사 김건수</string>
    <string name="word_pplus_address">서울특별시 강남구 영동대로 602, 케이222호</string>
    <string name="word_pplus_company_number">256-87-02734</string>
    <string name="word_pplus_email">cs@root37.net</string>
    <string name="word_pplus_online_sale_number">2022-서울강남-05819</string>
    <string name="word_company_number">사업자등록번호</string>
    <string name="word_online_sale_number">통신판매신고번호</string>
    <string name="hint_input_change_cash_amount">출금하실 캐시 입력</string>
    <string name="hint_input_account_name">예금주명 입력</string>
    <string name="hint_select_bank">은행 선택</string>
    <string name="hint_input_account_number">계좌번호 입력</string>
    <string name="word_buff_make_complete">BUFF 그룹 생성완료</string>
    <string name="msg_buff_make_complete_desc">BUFF 그룹 생성이 완료 되었습니다.\n버니 프렌즈를 초대해보세요.</string>
    <string name="msg_next_time2">다음에 하기</string>
    <string name="word_invite_buff">BUFF초대</string>
</resources>