<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/width_54"
        android:paddingRight="@dimen/width_54">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/msg_secession_description1"
            android:textColor="@color/color_232323"
            android:textSize="@dimen/textSize_84pt"/>


        <TextView
            android:id="@+id/text_secessionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_30"
            android:text="@string/word_secessionDate"
            android:textColor="@color/color_505050"
            android:textSize="@dimen/textSize_39pt"/>


        <TextView
            android:id="@+id/text_secession_description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_240"
            android:text="@string/msg_secession_description2"
            android:textColor="@color/color_232323"
            android:textSize="@dimen/textSize_39pt"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_authConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_136"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/height_110"
        android:layout_marginLeft="@dimen/width_72"
        android:layout_marginRight="@dimen/width_72"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/word_confirm"
        android:textColor="@color/color_ffffff_a3a3a3"
        android:textSize="@dimen/textSize_40pt"/>

</RelativeLayout>
