<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bf000000"
    android:fitsSystemWindows="true"
    tools:context=".apps.goods.ui.AlertCancelCompleteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/width_90"
        android:layout_marginEnd="@dimen/width_90"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_180">

            <ImageView
                android:id="@+id/image_alert_cancel_complete_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/width_20"
                android:layout_marginEnd="@dimen/width_20"
                android:src="@drawable/ic_top_close" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_notice_alert"
            android:textColor="@color/color_232323"
            android:textSize="@dimen/textSize_64pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_80"
            android:text="@string/msg_canceled_buy"
            android:textColor="@color/color_737373"
            android:textSize="@dimen/textSize_46pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_canceled_buy_desc"
            android:textColor="@color/color_ff4646"
            android:textSize="@dimen/textSize_36pt" />

        <TextView
            android:id="@+id/image_alert_cancel_complete_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_171"
            android:layout_marginTop="@dimen/height_180"
            android:background="@color/color_fc5c57"
            android:gravity="center"
            android:text="@string/word_confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_39pt" />


    </LinearLayout>

</RelativeLayout>