<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bf000000"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/width_90"
        android:layout_marginEnd="@dimen/width_90"
        android:background="@drawable/bg_ffffff_radius_24"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/height_120"
            android:text="@string/word_buff_make_complete"
            android:textColor="@color/color_fc5c57"
            android:textSize="@dimen/textSize_54pt"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_24"
            android:gravity="center"
            android:text="@string/msg_buff_make_complete_desc"
            android:textColor="@color/color_525961"
            android:textSize="@dimen/textSize_42pt"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_156"
            android:layout_marginTop="@dimen/height_96"
            android:background="@drawable/bg_fc5c57_radius_bottom_24"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_alert_buff_make_complete_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/msg_next_time2"
                android:textColor="@color/color_80ffffff"
                android:textSize="@dimen/textSize_48pt"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/width_3"
                android:layout_height="match_parent"
                android:background="@color/color_eef2f6" />


            <TextView
                android:id="@+id/text_alert_buff_make_complete_invite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/word_invite_buff"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_48pt"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>